# AricoGui

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
arico/: Arico.cpp  Arico.h  AricoExecutionStatus.h  AricoParameters.h  AricoResult.h  arico.py
type/: AricoMode.h
ui/: about_dialog.cpp  about_dialog.h  about_dialog.ui  main_window.cpp  main_window.h  main_window.ui
view_model/: MainWindowModel.cpp  MainWindowModel.h
